#16 User rights related tests - new user handling TODO